# ProteinFoldDAO

./: .gitignore  DEMO_GUIDE.md  DEPLOYMENT.md  LICENSE  README.md  protein_cache.db  pyproject.toml  submission.md
ai/: __init__.py  database_manager.py  predictor.py  simple_database_manager.py  test_custom_sequences.py  test_database.py  test_extended_features.py  test_protein_selection.py
contracts/: ProteinFoldingDAO.sol  deploy.js  hardhat.config.js
tests/: __init__.py  run_tests.py  test_integration.py
ui/: __init__.py  app.py  app_ios.py  app_v2.py  database_search.py  protein_cache.db  requirements.txt  streamlit.err  streamlit.out
